<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top"
    android:orientation="vertical" >

    <TextView
        android:id="@+settings/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_title"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+settings/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/settings_username"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+settings/username_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:editable="false"
        android:ems="10" />

    <TextView
        android:id="@+settings/phonenumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/settings_phonenumber"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+settings/phonenumber_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:editable="false"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+settings/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/settings_password"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+settings/password_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:editable="false"
        android:ems="10" />

</LinearLayout>