<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+addperson/project"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Projekt X"
        android:ellipsize="end"
        android:singleLine="true"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+addperson/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/addperson_title"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    <TextView
        android:id="@+addperson/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/addperson_description" />

    <EditText
        android:id="@+addperson/tf_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="phone" >

        <requestFocus />
    </EditText>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+addperson/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:onClick="cancelButton"
            android:text="@string/addperson_cancel"
            android:background="@drawable/button_cancel" />


        <Button
            android:id="@+addperson/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+addperson/cancel"
            android:onClick="submitButton"
            android:text="@string/addperson_submit"
            android:background="@drawable/button_normal" />

    </RelativeLayout>

</LinearLayout>